<resources>
    <string name="app_name">Open Weather</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Open Weather </string>
    <string name="nav_header_subtitle">Know your weather</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">City</string>
    <string name="search_hint">Search city…</string>
    <string name="add_city_ctrl">add city</string>
    <string name="weather_launcher">Weather launcher</string>
    <string name="version_address_name">Version 1.0\n\topenweathermap.org</string>
    <string name="weather_state_background">backgroundImage</string>
    <string name="city_unavailable">City not found</string>
    <string name="weather_image">weather image</string>
    <string name="_3_hour_24_hours">3 hour/24 hours</string>
    <string name="more_weather_forecast"><![CDATA[More weather forecast>>]]></string>
    <string name="_title_5days">5 days</string>
    <string name="detail_error_message">City Weather not available</string>
    <string name="feels_like_detail">feels like </string>
    <string name="humidities_detail">Humidity \n\n%1$d%</string>
    <string name="levels_detail">Level \n\n%1$d°</string>
    <string name="network_error_message">Retry \nNetwork Problem</string>

</resources>