<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/white"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="264dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="72dp"
        android:contentDescription="@string/weather_launcher"
        android:src="@drawable/weather_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/openWeatherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerInParent="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="-29dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/nunito_semibolditalic"
        android:text="@string/version_address_name"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="12sp" />


</RelativeLayout>